<resources>
    <string name="app_name">MyTweets</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">IKymi60wU6SlFGnBQkhZ43Zi2</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">MV9JkCRLSmWSa9WiGAXwI3s68DItR2dGFPaAQXa5TjiyNL8xGE</string>
    <string name="name_placeholder">Diamond</string>
    <string name="username_placeholder">\@diamondCandlesasd</string>
    <string name="time_placeholder">16m</string>
    <string name="tweet_content">Fancy us to win the match? New customers can get 20/1 on us right here, did you get that?</string>
    <string name="comments_tv">4</string>
    <string name="repeat_count">25</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tristique varius malesuada. Nam sed ligula et risus sollicitudin iaculis eu sed leo. Vivamus sit amet justo eu nibh fringilla tristique. Fusce velit purus, commodo vitae fermentum sit amet, ullamcorper ullamcorper turpis. Integer rhoncus mauris ut magna molestie efficitur. Ut ut purus arcu. Morbi tempus pellentesque tincidunt. Nam sit amet ligula quis nunc aliquam volutpat sed et tellus. Quisque euismod sollicitudin augue. Ut efficitur imperdiet bibendum. Vivamus eleifend efficitur elementum. Proin ligula ante, faucibus et tellus in, vestibulum tincidunt lacus.

Aenean neque eros, faucibus sit amet facilisis nec, gravida eget diam. Duis egestas metus in lorem interdum eleifend. Mauris pellentesque turpis nulla, ac scelerisque dui ultricies at. Curabitur ornare sem id molestie consectetur. Nam et ex ante. Duis ut nunc vel elit ultricies rutrum. Cras tincidunt nibh odio, in scelerisque metus rutrum quis. Pellentesque elit neque, pulvinar non nulla et, molestie tristique lacus. Mauris eget elit bibendum, vulputate mi quis, volutpat eros. Maecenas congue, justo elementum euismod pretium, dolor odio pharetra tellus, tincidunt aliquam ante quam ut diam. In faucibus sit amet elit at eleifend.

Vivamus molestie luctus lorem. Duis id odio lorem. Sed ac dolor in nibh feugiat tincidunt. Vestibulum porta dui blandit neque hendrerit sagittis. Sed cursus sapien lectus, eu sagittis est rutrum finibus. Quisque id tempus risus, vitae semper libero. Phasellus quis sem ligula. Quisque quis augue non elit venenatis gravida. Phasellus non metus vestibulum diam viverra pulvinar sed id erat. Nunc auctor neque sed arcu maximus ultricies. Quisque finibus augue non nisl eleifend fermentum. Suspendisse at ex eget purus condimentum malesuada a id urna. Integer eget ligula sed odio vehicula accumsan non eget metus. Aenean et accumsan tellus, ut sollicitudin nisi. Etiam a tellus leo.

Duis non nisl accumsan, cursus urna eu, congue nunc. Nulla ut libero sem. Proin porttitor ornare eleifend. Aliquam arcu nisl, volutpat in metus ut, pretium euismod purus. Suspendisse non maximus turpis. Aenean ultricies diam at ex egestas venenatis sit amet vel eros. Nullam lobortis, dolor ac porttitor dictum, ipsum ipsum tristique libero, ac hendrerit libero nulla in ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer iaculis ex a felis mollis rutrum.

In tempus, lorem ac molestie ornare, mi mauris aliquam tellus, quis porta massa ex vitae lorem. Ut sit amet tempus quam. Sed dictum tellus velit, et sodales lacus malesuada vitae. Suspendisse mollis egestas leo. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer fermentum, magna in commodo mattis, ipsum nulla sodales arcu, nec convallis turpis metus vel neque. Vestibulum a felis pellentesque, dapibus quam vel, vestibulum augue. Maecenas a lectus vitae eros ultrices sodales id pharetra lectus. Integer id nulla nec magna auctor pulvinar. Ut pellentesque augue non lectus lobortis, in tristique tortor pretium. Aliquam quis sem et mauris commodo posuere. In efficitur nec elit vel malesuada. Nullam et odio sit amet arcu sagittis bibendum. Fusce id massa sit amet massa ultricies rhoncus eget et turpis. Mauris consequat nulla magna, a venenatis justo rutrum eu.

Donec in tristique ex, sodales sollicitudin felis. Nunc nec semper purus, sit amet tempus arcu. Donec porta, est sed dignissim auctor, nibh leo elementum sapien, ut fermentum leo tellus ut libero. Phasellus et iaculis lectus. Maecenas id aliquet quam, sit amet imperdiet lorem. In tempor vitae elit quis fermentum. Aliquam erat volutpat. In at viverra tortor. Praesent sagittis dolor nunc, quis egestas odio feugiat non.

Nam sed faucibus dolor, in faucibus tellus. Suspendisse in tincidunt diam. Aenean suscipit ante a mattis elementum. Quisque eleifend maximus pharetra. Vivamus nec purus eu erat maximus finibus vitae sed elit. In posuere purus ut tortor condimentum, et mollis odio cursus. Aliquam euismod nisl sit amet nisi egestas, et rhoncus nibh vestibulum. Nulla ut ante ac sem gravida tempus. Nam nisi ex, dictum vitae mi a, convallis porta lectus. Donec eu tellus convallis, laoreet purus ut, imperdiet urna. Integer a turpis id ligula pulvinar auctor eget facilisis justo. Vivamus placerat varius quam, sed auctor orci laoreet vel. Pellentesque nec est vel dolor faucibus varius ac at elit.

Aliquam at mattis diam. Vestibulum ut ullamcorper ligula, quis feugiat lacus. Sed nec porta ex, dapibus convallis augue. Aenean elementum sed neque vitae auctor. Vestibulum ac facilisis metus, non lacinia nulla. Nullam ultricies eros eget lacinia pharetra. Ut id eleifend justo.

Donec vestibulum pulvinar magna ac dapibus. Pellentesque scelerisque, mi vitae congue vestibulum, justo diam interdum lectus, sit amet ullamcorper nibh neque non tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In a venenatis ante. Proin arcu nisl, rutrum quis ipsum ut, hendrerit pellentesque tortor. Vivamus luctus mi ligula, in egestas est varius eleifend. Etiam elit libero, dictum eget libero nec, fringilla semper orci. Sed euismod mollis urna eu feugiat. Etiam ut odio massa. Curabitur vehicula elit et bibendum fermentum. Aenean faucibus dolor vel quam placerat, vitae elementum mi suscipit.

Curabitur blandit diam vel dui posuere pulvinar. Curabitur pretium feugiat nulla a tempus. Donec id purus sem. Vestibulum lobortis dignissim vehicula. Pellentesque cursus, elit eget elementum finibus, risus lorem mattis velit, sed volutpat orci tortor id tellus. Curabitur elementum aliquam dignissim. Curabitur vitae molestie magna, quis iaculis nunc. Sed ultricies venenatis malesuada. Sed viverra blandit felis. Aliquam sagittis sem et odio sodales posuere. Cras non laoreet velit, blandit dignissim justo. Vestibulum et sem et purus semper egestas eget nec risus.</string>
    <string name="compose_tweet_hint">What\'s Happening ?</string>
    <string name="send_tweet">Tweet</string>
    <string name="tweet_count">140</string>
    <string name="save_draft_message">Save draft?</string>
    <string name="delete_message">DELETE</string>
    <string name="save_message">SAVE</string>
    <string name="no_internet_dialog_title">No Internet</string>
    <string name="no_internet_dialog_message">Not connected to internet</string>
    <string name="published_time">12.11 PM - 01 Oct 17</string>
    <string name="tweet_detail_toolbar_title">Tweet</string>
    <string name="action_logout">Logout</string>
    <string name="show_draft_messages">Draft Messages</string>
    <string name="show_user_profile">UserProfile</string>
    <string name="drafts_title">Drafts</string>
    <string name="draft_message">Draft Messages</string>
</resources>
