<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.codepath.assignment.mytweets.tweetdetailscreen.TwitterDetailFragment">

    <RelativeLayout
        android:id="@+id/rlTwitterDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_alignParentTop="true"
            android:id="@+id/ivAvatar"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:paddingTop="@dimen/padding_8"
            android:layout_alignParentStart="true"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:src="@mipmap/ic_launcher_round"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_below="@id/toolbar"
            android:paddingStart="@dimen/padding_8"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_toEndOf="@id/ivAvatar"
            android:layout_alignBaseline="@id/ivAvatar"
            android:gravity="center"
            tools:text="@string/name_placeholder"
            style="@style/tw__TweetFullName.Compact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvTweetContent"
            android:padding="@dimen/padding_8"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_below="@id/ivAvatar"
            android:layout_width="match_parent"
            style="@style/TextAppearance.AppCompat.Display1"
            tools:text="@string/tweet_content"
            android:autoLink="all"
            android:linksClickable="true"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tw__TweetScreenName.Compact"
            tools:text="@string/username_placeholder"
            android:paddingStart="@dimen/padding_8"
            android:paddingEnd="@dimen/padding_8"
            android:maxLines="1"
            android:layout_below="@+id/tvName"
            android:layout_toEndOf="@+id/ivAvatar"/>

        <TextView
            android:id="@+id/tvTweetTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTweetContent"
            tools:text="@string/published_time"
            style="@style/tw__TweetText.Quote"
            android:padding="@dimen/padding_8"
            />

        <ImageView
            android:id="@+id/ivSeparator"
            android:layout_below="@id/tvTweetTime"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            />

        <LinearLayout
            android:padding="@dimen/padding_16"
            android:layout_below="@id/ivSeparator"
            android:id="@+id/llTweetBtns"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/imgBtnComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_chat_bubble_outline_black_18px"
                tools:text="@string/comments_tv"
                android:background="@android:color/transparent"
                android:drawablePadding="@dimen/padding_8"
                />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/imgBtnReTweet"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/repeat_count"
                android:drawableStart="@drawable/ic_repeat_black_18px"
                android:background="@android:color/transparent"
                android:drawablePadding="@dimen/padding_8"
                />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/imgBtnLike"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/repeat_count"
                android:drawableStart="@drawable/ic_favorite_border_black_18px"
                android:background="@android:color/transparent"
                android:drawablePadding="@dimen/padding_8"
                />

        </LinearLayout>




    </RelativeLayout>


</layout>

