<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/rlComposeTweetDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_close_white_24px"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:id="@+id/toolbar"/>


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etTweetBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:maxLines="8"
            android:minLines="8"
            android:padding="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:hint="@string/compose_tweet_hint"
            android:gravity="top"
            app:backgroundTint="@android:color/transparent"
            android:layout_alignParentEnd="true"/>


        <LinearLayout
            android:id="@+id/llSendTweets"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/padding_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCharCount"
                android:text="@string/tweet_count"
                android:layout_gravity="center|end"
                android:padding="@dimen/padding_4"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnSendTweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/tw__blue_default"
                android:text="@string/send_tweet"
                android:layout_gravity="center|end"
                style="@style/Base.Widget.AppCompat.Button.Colored"/>

        </LinearLayout>




    </RelativeLayout>
</layout>
