<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_marginTop="@dimen/margin_16">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_marginLeft="@dimen/margin_16"/>

    <TextView
        android:id="@+id/tvName"
        android:paddingLeft="@dimen/padding_8"
        android:paddingTop="@dimen/padding_8"
        android:paddingBottom="@dimen/padding_8"
        android:layout_toRightOf="@id/ivAvatar"
        android:layout_toEndOf="@id/ivAvatar"
        android:gravity="center"
        tools:text="@string/name_placeholder"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvTweetContent"
        android:ellipsize="end"
        android:gravity="center"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        tools:text="@string/username_placeholder"
        android:layout_toRightOf="@id/tvName"
        android:layout_toEndOf="@id/tvName"
        android:layout_toLeftOf="@id/tvTweetTime"
        android:layout_toStartOf="@id/tvTweetTime"
        android:paddingLeft="@dimen/padding_8"
        android:paddingTop="@dimen/padding_8"
        />

    <TextView
        android:id="@+id/tvTweetTime"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="@string/time_placeholder"
        android:gravity="center"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:paddingRight="@dimen/padding_8"
        android:paddingLeft="@dimen/padding_8"
        android:paddingTop="@dimen/padding_8"
        android:paddingBottom="@dimen/padding_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvTweetContent"
        android:layout_toRightOf="@id/ivAvatar"
        android:layout_toEndOf="@id/ivAvatar"
        android:paddingStart="@dimen/padding_8"
        android:paddingLeft="@dimen/padding_8"
        android:paddingTop="@dimen/padding_8"
        android:paddingBottom="@dimen/padding_8"
        android:layout_below="@id/ivAvatar"
        android:layout_width="match_parent"
        tools:text="@string/tweet_content"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/btnLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTweetContent"
        android:layout_alignStart="@id/ivAvatar"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_alignLeft="@id/ivAvatar">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chat_bubble_outline_black"
            android:id="@+id/iv_reply_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_reply_icon"
            tools:text="2"
            android:id="@+id/tv_reply_number"
            android:layout_toRightOf="@id/iv_reply_icon"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_reply_number"
            android:src="@drawable/ic_repeat_black_24px"
            android:id="@+id/iv_retweet_icon"
            android:layout_toRightOf="@id/tv_reply_number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_retweet_icon"
            tools:text="2"
            android:id="@+id/tv_retweet_number"
            android:layout_toRightOf="@id/iv_retweet_icon"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_retweet_number"
            android:src="@drawable/ic_favorite_border_black_24dp"
            android:id="@+id/iv_fav_icon"
            android:layout_marginStart="@dimen/icon_left_margin"
            android:layout_toRightOf="@id/tv_retweet_number"
            android:layout_marginLeft="@dimen/icon_left_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_fav_icon"
            tools:text="2"
            android:textSize="@dimen/twwet_text_size"
            android:padding="@dimen/tweet_text_paddimg"
            android:id="@+id/tv_fav_num"
            />

    </RelativeLayout>

</RelativeLayout>